--- a/app/assets/stylesheets/content/evenMainRight.scss
+++ b/app/assets/stylesheets/content/evenMainRight.scss
@@ -13,7 +13,6 @@
       padding: 15px 0;
       color: $grey-7;
       font-family: $kaiti;
-      overflow: auto;
 
       div {
         float: left;
