--- a/app/assets/stylesheets/general/mixins.scss
+++ b/app/assets/stylesheets/general/mixins.scss
@@ -1,5 +1,4 @@
 @mixin content-container {
-  overflow: auto;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
@@ -33,7 +32,6 @@
 @mixin white-box-grey-border {
   border: 1px solid $grey-3;
   border-radius: 3px;
-  overflow: auto;
   background-color: white;
 }
 
